--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
       "pug": "^3.0.2",
       "qs": "^6.10.3",
       "sqlite3": "^5.0.8",
+      "uniqid": "^5.4.0",
       "webpack": "^5.72.1"
    },
    "devDependencies": {
