--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
       "point-of-view": "^5.3.0",
       "pug": "^3.0.2",
       "qs": "^6.10.3",
+      "rollbar": "^2.25.2",
       "sqlite3": "^5.0.8",
       "uniqid": "^5.4.0",
       "webpack": "^5.72.1"
