--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,26 +27,12 @@ jobs:
       - run: make lint
       - run: make test
 
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: docker/setup-buildx-action@v2
-
-      - uses: docker/login-action@v2
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_REPORTER_ID }}
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          coverageCommand: make test-coverage
+          debug: true
 
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          cache-from: hexletcomponents/fastify-nodejs-application:latest
-          cache-to: type=inline
-          tags: hexletcomponents/fastify-nodejs-application:latest
+      - run: make test
