--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "prebuild": "rm -rf dist",
       "test": "jest --verbose --runInBand",
       "build": "webpack",
-      "start": "fastify start server/plugin.js",
+      "start": "fastify start server/plugin.js -l debug -P --options --watch --verbose-watch --ignore-watch='node_modules .git .sqlite'",
       "dev": "fastify start server/plugin.js -l debug -P --options --watch --verbose-watch --ignore-watch='node_modules .git .sqlite'"
    },
    "jest": {
